--- a/content/projects/crm.mdx
+++ b/content/projects/crm.mdx
@@ -12,14 +12,14 @@ Quelle est la problématique ?
 
 Le problème est simple.  
   
-Une micro-influenceuse affiliée à une grande marque de cosmétique ne peut pas avoir la main sur ces clientes “ou affiliés” qui commandent via son lien.  
+Une micro-influenceuse affiliée à une grande marque de cosmétiques ne peut pas avoir la main sur ses clientes “ou affiliés” qui commandent via son lien.  
   
-Elle souhaiterait pouvoir avoir un outil lui permettant d’avoir une vue globale de ces clientes afin de pouvoir les recontacter et les recontacter.
+Elle souhaiterait pouvoir avoir un outil lui permettant d’avoir une vue globale de ses clientes afin de pouvoir les recontacter.
 
 ### Par où commencer ?
 
-Cela est possible grâce à une entrée de donnée qui provient du mail de confirmation de commande de l’entreprise de cosmétique auquel la cliente est affilié.  
-Voici les informations que l’on y voit dans le mail :
+Cela est possible grâce à une entrée de données qui provient du mail de confirmation de commande de l’entreprise de cosmétique auquel la cliente est affilié.  
+Voici les informations présente dans l'email :
 
 *   Nom et prénom
     
@@ -1028,7 +1028,7 @@ export const MainWorkflow = {
 
 Chaque email provenant d’une confirmation de commandes ou d’une confirmation d’abonnement est “parsé” pour y entrer dans la base de données.  
   
-Pour obtenir toutes les informations, nous devons vérifier si client existe bien, s’il existe. Nous devons mapper correctement les données.  
+Pour obtenir toutes les informations, nous devons vérifier si la cliente existe. Nous devons mapper correctement les données.  
   
 Si ce n’est pas le cas, nous devons créer le client dans la base de données.  
   
@@ -1043,10 +1043,10 @@ Mais quelle est la plus-value pour le client ?
 
 Effectivement, avoir une base de données sans pouvoir en tirer quelque chose est inutile.  
   
-C’est pour ça que le travail ne consiste pas forcément à avoir une base de données. Mais de pouvoir la transformer en données fiables et pertinentes pour accroitre la croissance.
+C’est pour ça que le travail ne consiste pas forcément à avoir une base de données. Mais de pouvoir la transformer en données fiables et pertinentes pour accroître la croissance.
 
 ###   
-Connaitre son “Top 10 clientes” et “Top produit du mois”.
+Connaître son “Top 10 clientes” et “Top produit du mois”.
 
 ![Screenshot 2025-10-31 at 14.05.32](https://imagedelivery.net/lXuc1r5w3ZJxYxyd2kOyfg/8854db89-1d11-4fb1-5e39-6e052c3ab700/public "Screenshot 2025-10-31 at 14.05.32")
 
@@ -1447,7 +1447,7 @@ export const clientWorkflow = {
 
 ### Connaitre la typologie de client en fonction de la catégorie de produit
 
-Un des gros point de douleurs a résoudre avec ce projet est la segmentation des abonnées et acheteuse des produits. 
+Un des principal défi a résoudre avec ce projet est la segmentation des abonnées et acheteuses des produits. 
 En effet, en ayant les produits categorisé et ayant relié les produits par clients de ces derniers.. 
 Nous pouvons ainsi savoir quel typologie de produit est dominant parmis les achats de la clientes. 
 Cela nous permet : 
@@ -1465,9 +1465,9 @@ Cela nous permet :
 
 ### Relancer des clientes n’ayant pas encore commandé depuis un certain temps
 
-Grâce à la date de commande, nous pouvons savoir quel cliente/abonnée a stoppé d'être active dans ses achats avec la micro-influenceuse. 
+Grâce à la date de commande, nous pouvons savoir quelles clientes/abonnées a cessé d'être active dans ses achats avec la micro-influenceuse. 
 
-Une page est dedié pour ce cas d'usage ce qui permet aux équipes d'exporter la liste de cliente afin de les contacter ou relancer par email via Instagram grâce au nom et prénom. 
+Une page est dediée pour ce cas d'usage ce qui permet aux équipes d'exporter la liste de cliente afin de les contacter ou relancer par email via Instagram grâce au nom et prénom. 
 
 ![Screenshot 2025-10-31 at 14.22.25](https://imagedelivery.net/lXuc1r5w3ZJxYxyd2kOyfg/45d7e27d-8c31-4798-cc2e-2caf51880600/public "Screenshot 2025-10-31 at 14.22.25")
 
